--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - DataFlask Lab</title>
+    <title>About - Mayar Data Science Lab</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -34,7 +34,7 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="phone" class="w-4 h-4 mr-1"></i> +1 (234) 567-890</a>
-                <a href="mailto:info@dataflasklab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@dataflasklab.com</a>
+                <a href="mailto:info@mayardatasciencelab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@dataflasklab.com</a>
             </div>
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="twitter" class="w-4 h-4"></i></a>
@@ -54,7 +54,7 @@
                             <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
                                 <i data-feather="flask" class="text-white"></i>
                             </div>
-                            <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">DataFlask Lab</span>
+                            <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Mayar Data Science Lab</span>
                         </a>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                 <div>
                     <h2 class="text-3xl font-bold">Our Story</h2>
                     <p class="mt-4 text-gray-600">
-                        Founded by a group of passionate data scientists, DataFlask Lab began as a small research initiative focused on machine learning applications. Over the years, we've grown into a leading interdisciplinary research center with collaborations across academia and industry.
+                        Founded by a group of passionate data scientists, Mayar Data Science Lab began as a small research initiative focused on machine learning applications. Over the years, we've grown into a leading interdisciplinary research center with collaborations across academia and industry.
                     </p>
                     <div class="mt-10">
                         <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Research lab" class="rounded-lg shadow-xl">
@@ -145,7 +145,7 @@
                         <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
                             <i data-feather="flask" class="text-white"></i>
                         </div>
-                        <span class="ml-2 text-xl font-bold">DataFlask Lab</span>
+                        <span class="ml-2 text-xl font-bold">Mayar Data Science Lab</span>
                     </div>
                     <p class="mt-4 text-gray-300">
                         Advancing data science through innovative research, analytics, and collaboration.
@@ -186,7 +186,7 @@
             </div>
             <div class="mt-12 border-t border-gray-700 pt-8 flex flex-col md:flex-row justify-between">
                 <p class="text-gray-400 text-sm">
-                    © 2023 DataFlask Lab. All rights reserved.
+                    © 2023 Mayar Data Science Lab. All rights reserved.
                 </p>
                 <div class="mt-4 md:mt-0 flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white text-sm transition">Privacy Policy</a>
