--- a/apply.html
+++ b/apply.html
@@ -27,7 +27,7 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="phone" class="w-4 h-4 mr-1"></i> +1 (234) 567-890</a>
-                <a href="mailto:info@dataflasklab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@dataflasklab.com</a>
+                <a href="mailto:info@MayarDataScience.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@MayarDataScienceLab.com</a>
             </div>
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="twitter" class="w-4 h-4"></i></a>
@@ -47,7 +47,7 @@
                             <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
                                 <i data-feather="flask" class="text-white"></i>
                             </div>
-                            <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">DataFlask Lab</span>
+                            <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">MayarDataScience Lab</span>
                         </a>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                         <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
                             <i data-feather="flask" class="text-white"></i>
                         </div>
-                        <span class="ml-2 text-xl font-bold">DataFlask Lab</span>
+                        <span class="ml-2 text-xl font-bold">MayarDataScience Lab</span>
                     </div>
                     <p class="mt-4 text-gray-300">
                         Advancing data science through innovative research, analytics, and collaboration.
@@ -270,7 +270,7 @@
             </div>
             <div class="mt-12 border-t border-gray-700 pt-8 flex flex-col md:flex-row justify-between">
                 <p class="text-gray-400 text-sm">
-                    © 2023 DataFlask Lab. All rights reserved.
+                    © 2023 MayarDataScience Lab. All rights reserved.
                 </p>
                 <div class="mt-4 md:mt-0 flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white text-sm transition">Privacy Policy</a>
