--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="phone" class="w-4 h-4 mr-1"></i> +1 (234) 567-890</a>
-                <a href="mailto:info@dataflasklab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@dataflasklab.com</a>
+                <a href="mailto:info@MayarDataSciencelab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@MayarDataSciencelab.com</a>
             </div>
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="twitter" class="w-4 h-4"></i></a>
@@ -67,7 +67,7 @@
                         <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
                             <i data-feather="flask" class="text-white"></i>
                         </div>
-                        <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">DataFlask Lab</span>
+                        <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">MayarDataScience Lab</span>
                     </div>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
@@ -100,7 +100,7 @@
                         <span class="block text-primary">Data Science Research</span>
                     </h1>
                     <p class="mt-3 text-lg sm:mt-5 sm:text-xl sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        At DataFlask Lab, we leverage cutting-edge analytics and AI to solve complex problems through data-driven approaches.
+                        At MayarDataScience Lab, we leverage cutting-edge analytics and AI to solve complex problems through data-driven approaches.
                     </p>
                     <div class="mt-8 sm:max-w-lg sm:mx-auto sm:text-center lg:text-left lg:mx-0">
                         <div class="flex flex-col sm:flex-row sm:justify-center lg:justify-start space-y-4 sm:space-y-0 sm:space-x-4">
@@ -458,7 +458,7 @@
                         <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
                             <i data-feather="flask" class="text-white"></i>
                         </div>
-                        <span class="ml-2 text-xl font-bold">DataFlask Lab</span>
+                        <span class="ml-2 text-xl font-bold">MayarDataScience Lab</span>
                     </div>
                     <p class="mt-4 text-gray-300">
                         Advancing data science through innovative research, analytics, and collaboration.
@@ -499,7 +499,7 @@
             </div>
             <div class="mt-12 border-t border-gray-700 pt-8 flex flex-col md:flex-row justify-between">
                 <p class="text-gray-400 text-sm">
-                    © 2023 DataFlask Lab. All rights reserved.
+                    © 2023 MayarDataScience Lab. All rights reserved.
                 </p>
                 <div class="mt-4 md:mt-0 flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white text-sm transition">Privacy Policy</a>
