--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="flex items-center">
                     <div class="flex-shrink-0 flex items-center">
                         <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
-                            <i data-feather="flask" class="text-white"></i>
+                            <i data-feather="Mayar" class="text-white"></i>
                         </div>
                         <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">MayarDataScience Lab</span>
                     </div>
@@ -456,7 +456,7 @@
                 <div class="col-span-2">
                     <div class="flex items-center">
                         <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
-                            <i data-feather="flask" class="text-white"></i>
+                            <i data-feather="Mayar" class="text-white"></i>
                         </div>
                         <span class="ml-2 text-xl font-bold">MayarDataScience Lab</span>
                     </div>
