--- a/team.html
+++ b/team.html
@@ -88,8 +88,9 @@
             <div class="mt-16 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
                 <!-- Team Member 1 -->
                 <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                    <img class="h-40 w-40 rounded-full mx-auto object-cover" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Dr. Ahmed AlRadaideh">
-                    <h3 class="mt-4 text-2xl font-bold">Dr. Ahmed AlRadaideh</h3>
+                    <img class="h-40 w-40 rounded-full mx-auto object-cover"
+     src="pic.jpg"
+     alt="Dr. Ahmed AlRadaideh">
                     <p class="text-secondary font-medium">Team Director</p>
                     <p class="mt-4 text-gray-500">Data Science Leader with 10+ years of research experience</p>
                     <div class="mt-6 flex justify-center space-x-4">
