--- a/team.html
+++ b/team.html
@@ -108,8 +108,10 @@
 
                 <!-- Team Member 2 -->
                 <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                    <img class="h-40 w-40 rounded-full mx-auto object-cover" src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Dr. Jamal Williams">
-                    <h3 class="mt-4 text-2xl font-bold">Dr. Jamal Williams</h3>
+                    <img class="h-40 w-40 rounded-full mx-auto object-cover"
+     src="pic1.jpg"
+     alt="Dr. Bilal Ahmed">
+                    <h3 class="mt-4 text-2xl font-bold">Dr.Bilal Ahmed</h3>
                     <p class="text-secondary font-medium">Lead AI Researcher</p>
                     <p class="mt-4 text-gray-500">Machine Learning pioneer and neural networks expert</p>
                     <div class="mt-6 flex justify-center space-x-4">
