--- a/team.html
+++ b/team.html
@@ -109,7 +109,7 @@
                 <!-- Team Member 2 -->
                 <div class="bg-white p-6 rounded-lg shadow-md text-center">
                     <img class="h-40 w-40 rounded-full mx-auto object-cover"
-     src="pic1.jpg"
+     src="Pic1.PNG"
      alt="Dr. Bilal Ahmed">
                     <h3 class="mt-4 text-2xl font-bold">Dr.Bilal Ahmed</h3>
                     <p class="text-secondary font-medium">Lead AI Researcher</p>
