--- a/research.html
+++ b/research.html
@@ -231,7 +231,9 @@
                         <p class="mt-2 text-gray-600">Practical guidelines for implementing ethical AI systems in real-world applications across different industries.</p>
                         <div class="mt-4 flex items-center">
                             <div class="flex-shrink-0">
-                                <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Researcher">
+                                <img class="h-40 w-40 rounded-full mx-auto object-cover"
+     src="pic.jpg"
+      alt="Researcher">
                             </div>
                             <div class="ml-3">
                                 <p class="text-sm font-medium text-dark">Dr. Ahmed AlRadaideh</p>
