--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research - MayarDataScience Lab</title>
+    <title>Research - DataFlask Lab</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -41,7 +41,7 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="phone" class="w-4 h-4 mr-1"></i> +1 (234) 567-890</a>
-                <a href="mailto:info@MayarDataSciencelab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@MayarDataSciencelab.com</a>
+                <a href="mailto:info@dataflasklab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@dataflasklab.com</a>
             </div>
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="twitter" class="w-4 h-4"></i></a>
@@ -59,9 +59,9 @@
                     <div class="flex-shrink-0 flex items-center">
                         <a href="index.html" class="flex items-center">
                             <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
-                                <i data-feather="Mayar" class="text-white"></i>
+                                <i data-feather="flask" class="text-white"></i>
                             </div>
-                            <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">MayarDataScience Lab</span>
+                            <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">DataFlask Lab</span>
                         </a>
                     </div>
                 </div>
@@ -231,9 +231,7 @@
                         <p class="mt-2 text-gray-600">Practical guidelines for implementing ethical AI systems in real-world applications across different industries.</p>
                         <div class="mt-4 flex items-center">
                             <div class="flex-shrink-0">
-                                <img class="h-40 w-40 rounded-full mx-auto object-cover"
-     src="pic.jpg"
-      alt="Researcher">
+                                <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Researcher">
                             </div>
                             <div class="ml-3">
                                 <p class="text-sm font-medium text-dark">Dr. Ahmed AlRadaideh</p>
@@ -293,9 +291,9 @@
                 <div class="col-span-2">
                     <div class="flex items-center">
                         <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
-                            <i data-feather="Mayar" class="text-white"></i>
+                            <i data-feather="flask" class="text-white"></i>
                         </div>
-                        <span class="ml-2 text-xl font-bold">MayarDataScience Lab</span>
+                        <span class="ml-2 text-xl font-bold">DataFlask Lab</span>
                     </div>
                     <p class="mt-4 text-gray-300">
                         Advancing data science through innovative research, analytics, and collaboration.
@@ -336,7 +334,7 @@
             </div>
             <div class="mt-12 border-t border-gray-700 pt-8 flex flex-col md:flex-row justify-between">
                 <p class="text-gray-400 text-sm">
-                    © 2023 MayarDataScience Lab. All rights reserved.
+                    © 2023 DataFlask Lab. All rights reserved.
                 </p>
                 <div class="mt-4 md:mt-0 flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white text-sm transition">Privacy Policy</a>
