--- a/research.html
+++ b/research.html
@@ -94,17 +94,18 @@
 
             <!-- Research Filter -->
             <div class="mt-12 flex flex-wrap justify-center gap-4">
-                <button class="px-4 py-2 rounded-full bg-primary text-white">All</button>
-                <button class="px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50">Machine Learning</button>
-                <button class="px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50">Data Analytics</button>
-                <button class="px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50">Visualization</button>
-                <button class="px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50">Statistical Methods</button>
-            </div>
+    <button class="filter-btn px-4 py-2 rounded-full bg-primary text-white" data-filter="all">All</button>
+    <button class="filter-btn px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50" data-filter="machine-learning">Machine Learning</button>
+    <button class="filter-btn px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50" data-filter="data-analytics">Data Analytics</button>
+    <button class="filter-btn px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50" data-filter="visualization">Visualization</button>
+    <button class="filter-btn px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50" data-filter="statistical-methods">Statistical Methods</button>
+</div>
 
             <!-- Research Grid -->
             <div class="mt-12 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
                 <!-- Publication 1 -->
-                <div class="research-card bg-white rounded-lg shadow-md overflow-hidden">
+               <div class="research-card machine-learning bg-white rounded-lg shadow-md overflow-hidden">
+    <!-- Machine Learning publication --></div>
                     <div class="h-48 bg-gradient-to-r from-primary/10 to-secondary/10 flex items-center justify-center">
                         <img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Deep Learning Research" class="h-full w-full object-cover">
                     </div>
@@ -132,7 +133,9 @@
                 </div>
 
                 <!-- Publication 2 -->
-                <div class="research-card bg-white rounded-lg shadow-md overflow-hidden">
+               <div class="research-card data-analytics bg-white rounded-lg shadow-md overflow-hidden">
+    <!-- Data Analytics publication -->
+</div>
                     <div class="h-48 bg-gradient-to-r from-secondary/10 to-primary/10 flex items-center justify-center">
                         <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Data Analysis Research" class="h-full w-full object-cover">
                     </div>
@@ -160,7 +163,9 @@
                 </div>
 
                 <!-- Publication 3 -->
-                <div class="research-card bg-white rounded-lg shadow-md overflow-hidden">
+                <div class="research-card visualization bg-white rounded-lg shadow-md overflow-hidden">
+    <!-- Visualization publication -->
+</div>
                     <div class="h-48 bg-gradient-to-r from-primary/10 to-secondary/10 flex items-center justify-center">
                         <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Visualization Research" class="h-full w-full object-cover">
                     </div>
@@ -188,7 +193,9 @@
                 </div>
 
                 <!-- Publication 4 -->
-                <div class="research-card bg-white rounded-lg shadow-md overflow-hidden">
+               <div class="research-card statistical-methods bg-white rounded-lg shadow-md overflow-hidden">
+    <!-- Statistical Methods publication -->
+</div>
                     <div class="h-48 bg-gradient-to-r from-secondary/10 to-primary/10 flex items-center justify-center">
                         <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Statistical Research" class="h-full w-full object-cover">
                     </div>
