--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research - MayarData Lab</title>
+    <title>Research - DataFlask Lab</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
@@ -22,7 +22,7 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="phone" class="w-4 h-4 mr-1"></i> +1 (234) 567-890</a>
-                <a href="mailto:info@MayarDatalab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@MayarDatalab.com</a>
+                <a href="mailto:info@dataflasklab.com" class="hover:text-primary transition"><i data-feather="mail" class="w-4 h-4 mr-1"></i> info@dataflasklab.com</a>
             </div>
             <div class="flex items-center space-x-4">
                 <a href="#" class="hover:text-primary transition"><i data-feather="twitter" class="w-4 h-4"></i></a>
@@ -40,9 +40,9 @@
                     <div class="flex-shrink-0 flex items-center">
                         <a href="index.html" class="flex items-center">
                             <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
-                                <i data-feather="Mayar" class="text-white"></i>
+                                <i data-feather="flask" class="text-white"></i>
                             </div>
-                            <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">MayarData Lab</span>
+                            <span class="ml-2 text-xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">DataFlask Lab</span>
                         </a>
                     </div>
                 </div>
@@ -104,9 +104,9 @@
                 <div class="col-span-2">
                     <div class="flex items-center">
                         <div class="h-8 w-8 rounded-full bg-primary flex items-center justify-center">
-                            <i data-feather="Mayar" class="text-white"></i>
+                            <i data-feather="flask" class="text-white"></i>
                         </div>
-                        <span class="ml-2 text-xl font-bold">MayarData Lab</span>
+                        <span class="ml-2 text-xl font-bold">DataFlask Lab</span>
                     </div>
                     <p class="mt-4 text-gray-300">
                         Advancing data science through innovative research, analytics, and collaboration.
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="mt-12 border-t border-gray-700 pt-8 flex flex-col md:flex-row justify-between">
-                <p class="text-gray-400 text-sm">© 2023 MayarData Lab. All rights reserved.</p>
+                <p class="text-gray-400 text-sm">© 2023 DataFlask Lab. All rights reserved.</p>
                 <div class="mt-4 md:mt-0 flex space-x-6">
                     <a href="#" class="text-gray-400 hover:text-white text-sm transition">Privacy Policy</a>
                     <a href="#" class="text-gray-400 hover:text-white text-sm transition">Terms of Service</a>
