--- a/research.html
+++ b/research.html
@@ -80,12 +80,11 @@
 
             <!-- Research Grid -->
             <div class="mt-12 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-                <!-- Research Cards (28 total) -->
-                <!-- Each card has a unique image from Unsplash or similar. Swap for your own images if desired. -->
+                <!-- Papers inserted as cards below; images are representative Unsplash links -->
 
                 <!-- 1 -->
                 <div class="research-card data-analytics bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1496307653780-42ee777d4842?auto=format&fit=crop&w=600&q=80" alt="School Bullying" class="w-full h-48 object-cover">
+                    <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=600&q=80" alt="School Bullying" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Data Analytics</span>
                         <h3 class="mt-2 text-lg font-bold">Understanding the Drivers of School Bullying: Insights from Jordanian Students in Irbid</h3>
@@ -98,7 +97,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-primary/10 text-primary">Machine Learning</span>
                         <h3 class="mt-2 text-lg font-bold">Examining Heat and Mass Transfer in MHD Williamson Micropolar Fluid Flow on a Stretching Sheet with Viscous Dissipation, Chemical Reaction, and Nonlinear Heat Generation/Absorption</h3>
-                        <p class="mt-2 text-gray-600">Ahmed, B., &amp; Al-Radaideh, A. (2025). Journal of Advanced Research in Numerical Heat Transfer, 33(1), 30–47. <a href="https://doi.org/10.37934/arnht.33.3.3047" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Ahmed, B., &amp; Al-Radaideh, A. (2025). Journal of Advanced Research in Numerical Heat Transfer, 33(1), 30–47.<br>
+                        <a href="https://doi.org/10.37934/arnht.33.3.3047" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.37934/arnht.33.3.3047</a></p>
                     </div>
                 </div>
                 <!-- 3 -->
@@ -107,7 +107,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Data Analytics</span>
                         <h3 class="mt-2 text-lg font-bold">Good Governance and Innovation: a Renewed Global Framework for National and Supranational Policy Advancement</h3>
-                        <p class="mt-2 text-gray-600">Alberto Ibanez, Al Radaideh A., Juan Antonio Jimber del Rio, Gyanendra Singh Sisodia (2023). Journal of the Knowledge Economy, 15, 5794-5816. <a href="https://doi.org/10.1007/s13132-023-01324-7" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Alberto Ibanez, Al Radaideh A., Juan Antonio Jimber del Rio, Gyanendra Singh Sisodia (2023). Journal of the Knowledge Economy, 15, 5794-5816.<br>
+                        <a href="https://doi.org/10.1007/s13132-023-01324-7" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.1007/s13132-023-01324-7</a></p>
                     </div>
                 </div>
                 <!-- 4 -->
@@ -116,7 +117,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">Validation and Psychometric Evaluation of Diabetes Literacy, Numeracy, and Knowledge Tools in the Arabic Context</h3>
-                        <p class="mt-2 text-gray-600">Hasan S., Alzubaidi H., Samorinha C., Al Radaideh A. (2023). The Science of Diabetes Self Management and Care, 49(6), 449-461. <a href="https://doi.org/10.1177/26350106231207349" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Hasan S., Alzubaidi H., Samorinha C., Al Radaideh A. (2023). The Science of Diabetes Self Management and Care, 49(6), 449-461.<br>
+                        <a href="https://doi.org/10.1177/26350106231207349" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.1177/26350106231207349</a></p>
                     </div>
                 </div>
                 <!-- 5 -->
@@ -125,7 +127,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Data Analytics</span>
                         <h3 class="mt-2 text-lg font-bold">Synergistic Effects of Culture and Good Governance on Innovation: A European Union Comprehensive Correlational Approach</h3>
-                        <p class="mt-2 text-gray-600">Alberto Ibañez Fernandez, Al Radaideh A., Gyanendra Singh Sisodia, Juan Antonio Jimber Del Río, Asok Mathew (2022). Journal of Global Policy and Governance, 11, 79-95. <a href="https://doi.org/10.14666/2194-7759-11-1-005" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Alberto Ibañez Fernandez, Al Radaideh A., Gyanendra Singh Sisodia, Juan Antonio Jimber Del Río, Asok Mathew (2022). Journal of Global Policy and Governance, 11, 79-95.<br>
+                        <a href="https://doi.org/10.14666/2194-7759-11-1-005" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.14666/2194-7759-11-1-005</a></p>
                     </div>
                 </div>
                 <!-- 6 -->
@@ -143,7 +146,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">Happiness Among UAE Undergraduates: One Year Since COVID-19</h3>
-                        <p class="mt-2 text-gray-600">Altal Safwat, Al Radaideh A. (2022). Electronic Journal of Applied Statistical Analysis, 15, 277-289. <a href="https://doi.org/10.1285/i20705948v15n2p277" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Altal Safwat, Al Radaideh A. (2022). Electronic Journal of Applied Statistical Analysis, 15, 277-289.<br>
+                        <a href="https://doi.org/10.1285/i20705948v15n2p277" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.1285/i20705948v15n2p277</a></p>
                     </div>
                 </div>
                 <!-- 8 -->
@@ -152,7 +156,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Data Analytics</span>
                         <h3 class="mt-2 text-lg font-bold">Managing University E-Learning Environments and Academic Achievement in the UAE</h3>
-                        <p class="mt-2 text-gray-600">Fernandez AI, Al Radaideh A., Singh Sisodia G., Mathew A., Jimber del Río JA (2022). PLOS ONE, 17. <a href="https://doi.org/10.1371/journal.pone.0268338" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Fernandez AI, Al Radaideh A., Singh Sisodia G., Mathew A., Jimber del Río JA (2022). PLOS ONE, 17.<br>
+                        <a href="https://doi.org/10.1371/journal.pone.0268338" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.1371/journal.pone.0268338</a></p>
                     </div>
                 </div>
                 <!-- 9 -->
@@ -161,7 +166,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">Emotional Intelligence and Personal Finances in the Academic Curricula: A Critical Analysis of Their Potential Synergies</h3>
-                        <p class="mt-2 text-gray-600">Imam S., Fernandez AI, Singh Sisodia G., Jimber del Río JA, Al Radaideh A. (2022). Asian Culture and History, 14, 6-15. <a href="https://doi.org/10.5539/ach.v14n1p6" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Imam S., Fernandez AI, Singh Sisodia G., Jimber del Río JA, Al Radaideh A. (2022). Asian Culture and History, 14, 6-15.<br>
+                        <a href="https://doi.org/10.5539/ach.v14n1p6" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.5539/ach.v14n1p6</a></p>
                     </div>
                 </div>
                 <!-- 10 -->
@@ -170,7 +176,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">Comparison of Surface Equivalent Dose in CBCT, Digital Panoramic and Intra-Oral X-Ray Generators Using Instadose Device: An In-Vitro Study</h3>
-                        <p class="mt-2 text-gray-600">Mathew A., Almahi S., Mohamed R., Abu Fanas S., Jaber MA, Luke AM, Al Radaideh AH, Shetty S. (2021). The Open Dentistry Journal, 15, 689-697. <a href="https://doi.org/10.2174/1874210602115010689" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Mathew A., Almahi S., Mohamed R., Abu Fanas S., Jaber MA, Luke AM, Al Radaideh AH, Shetty S. (2021). The Open Dentistry Journal, 15, 689-697.<br>
+                        <a href="https://doi.org/10.2174/1874210602115010689" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.2174/1874210602115010689</a></p>
                     </div>
                 </div>
                 <!-- 11 -->
@@ -179,7 +186,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">An In Vitro Comparative Analysis on Root Canal Transportation, Centering Ability, Angle of Curvature Using XP Endo Shaper and WaveOne Gold Rotary Systems: A CBCT Study</h3>
-                        <p class="mt-2 text-gray-600">Mathew A., Burahmah A., Fanas SA, Mahmoud O., Jaber MA, Natarajan PM, Al Radaideh A. (2021). Systematic Reviews in Pharmacy, 12, 1572-1580. <a href="https://doi.org/10.31838/srp.2021.1.222" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Mathew A., Burahmah A., Fanas SA, Mahmoud O., Jaber MA, Natarajan PM, Al Radaideh A. (2021). Systematic Reviews in Pharmacy, 12, 1572-1580.<br>
+                        <a href="https://doi.org/10.31838/srp.2021.1.222" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.31838/srp.2021.1.222</a></p>
                     </div>
                 </div>
                 <!-- 12 -->
@@ -188,7 +196,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-primary/10 text-primary">Machine Learning</span>
                         <h3 class="mt-2 text-lg font-bold">Software Defect Prediction Using Heterogeneous Ensemble Classification Based on Segmented Patterns</h3>
-                        <p class="mt-2 text-gray-600">Alsawalqah H., Hijazi N., Eshtay M., Faris H., Al Radaideh A., Aljarah I., Alshamaileh Y. (2020). Applied Sciences, 15. <a href="https://doi.org/10.3390/app10051745" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Alsawalqah H., Hijazi N., Eshtay M., Faris H., Al Radaideh A., Aljarah I., Alshamaileh Y. (2020). Applied Sciences, 15.<br>
+                        <a href="https://doi.org/10.3390/app10051745" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.3390/app10051745</a></p>
                     </div>
                 </div>
                 <!-- 13 -->
@@ -197,7 +206,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">Mandibular Gonial Angle Measurement as a Predictor of Gender: A Digital Panoramic Study</h3>
-                        <p class="mt-2 text-gray-600">Abuhijleh E., Warreth A., Qawadi M., Abdulrida E., Al Radaideh A., Al Taki A., et al. (2019). The Open Dentistry Journal, 13, 399-404. <a href="https://doi.org/10.2174/1874210601913010399" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Abuhijleh E., Warreth A., Qawadi M., Abdulrida E., Al Radaideh A., Al Taki A., et al. (2019). The Open Dentistry Journal, 13, 399-404.<br>
+                        <a href="https://doi.org/10.2174/1874210601913010399" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.2174/1874210601913010399</a></p>
                     </div>
                 </div>
                 <!-- 14 -->
@@ -224,7 +234,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">Comparison of Canal Transportation and Centering Ability of Rotary I-Race and BT-Race Systems Using Cone Beam Computed Tomography: An In Vitro Study</h3>
-                        <p class="mt-2 text-gray-600">Mathew A., Zahraa M Ali, Ghaya Y Almadhani, Al Radaideh A., Ahmed J Taleb (2018). World Journal of Dentistry, 9, 297-303. <a href="https://doi.org/10.5005/jp-journals-10015-1552" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Mathew A., Zahraa M Ali, Ghaya Y Almadhani, Al Radaideh A., Ahmed J Taleb (2018). World Journal of Dentistry, 9, 297-303.<br>
+                        <a href="https://doi.org/10.5005/jp-journals-10015-1552" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.5005/jp-journals-10015-1552</a></p>
                     </div>
                 </div>
                 <!-- 17 -->
@@ -233,7 +244,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">The Antiplaque Efficacy of Two Herbal-Based Toothpastes: A Clinical Intervention</h3>
-                        <p class="mt-2 text-gray-600">Varma SR, Sherif H, Serafi A, Fanas SA, Desai V, Abuhijleh E, Al Radaideh A. (2018). Journal of International Society of Preventive and Community Dentistry, 8, 21-27. <a href="https://doi.org/10.4103/jispcd.JISPCD_411_17" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Varma SR, Sherif H, Serafi A, Fanas SA, Desai V, Abuhijleh E, Al Radaideh A. (2018). Journal of International Society of Preventive and Community Dentistry, 8, 21-27.<br>
+                        <a href="https://doi.org/10.4103/jispcd.JISPCD_411_17" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.4103/jispcd.JISPCD_411_17</a></p>
                     </div>
                 </div>
                 <!-- 18 -->
@@ -242,7 +254,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Data Analytics</span>
                         <h3 class="mt-2 text-lg font-bold">Comparison of Antibacterial Efficacy of Miswak Extract to Conventional Mouth Washes – A Microbiological Study</h3>
-                        <p class="mt-2 text-gray-600">Islam H Al-Qudah, Al Radaideh AH, Nader Ahmed, Asok Mathew (2017). Biosciences Biotechnology Research Asia, 14, 99-104. <a href="https://doi.org/10.13005/bbra/2423" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Islam H Al-Qudah, Al Radaideh AH, Nader Ahmed, Asok Mathew (2017). Biosciences Biotechnology Research Asia, 14, 99-104.<br>
+                        <a href="https://doi.org/10.13005/bbra/2423" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.13005/bbra/2423</a></p>
                     </div>
                 </div>
                 <!-- 19 -->
@@ -260,7 +273,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Statistical Methods</span>
                         <h3 class="mt-2 text-lg font-bold">A Study on Comparison of Salivary Cortisol Circadian Rhythm in Periodontal Diseases with External Stressors and Clinical Parameters</h3>
-                        <p class="mt-2 text-gray-600">Mathew A., Prabhu MN, Sheikha Saeed, Majd Khalid, Nisha Varughese, Al Radaideh AH (2016). Biomedical & Pharmacology Journal, 9, 679-688. <a href="https://doi.org/10.13005/bpj/990" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Mathew A., Prabhu MN, Sheikha Saeed, Majd Khalid, Nisha Varughese, Al Radaideh AH (2016). Biomedical & Pharmacology Journal, 9, 679-688.<br>
+                        <a href="https://doi.org/10.13005/bpj/990" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.13005/bpj/990</a></p>
                     </div>
                 </div>
                 <!-- 21 -->
@@ -305,7 +319,8 @@
                     <div class="p-6">
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-secondary/10 text-secondary">Data Analytics</span>
                         <h3 class="mt-2 text-lg font-bold">Looking at the Psychotherapy Process as an Intersubjective Dynamic of Meaning-Making: A Case Study with Discourse Flow Analysis</h3>
-                        <p class="mt-2 text-gray-600">Salvatore S., Gelo O., Gennaro A., Manzo S., Al Radaideh A., et al. (2010). Journal of Constructivist Psychology, 23, 195-230. <a href="https://doi.org/10.1080/10720531003765981" target="_blank" class="text-primary hover:text-primary/80">DOI</a></p>
+                        <p class="mt-2 text-gray-600">Salvatore S., Gelo O., Gennaro A., Manzo S., Al Radaideh A., et al. (2010). Journal of Constructivist Psychology, 23, 195-230.<br>
+                        <a href="https://doi.org/10.1080/10720531003765981" target="_blank" class="text-primary hover:text-primary/80">DOI: 10.1080/10720531003765981</a></p>
                     </div>
                 </div>
                 <!-- 26 -->
