--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                     <a href="research.html" class="text-dark hover:text-primary font-medium transition">Research</a>
                     <a href="services.html" class="text-dark hover:text-primary font-medium transition">Services</a>
                     <a href="team.html" class="text-dark hover:text-primary font-medium transition">Team</a>
+                    <a href="Questionnaire Builder.html" class="text-dark hover:text-primary font-medium transition flex items-center">
+                        <i data-feather="edit-3" class="w-4 h-4 mr-1"></i>
+                        Questionnaire Builder
+                    </a>
                     <a href="contact.html" class="text-dark hover:text-primary font-medium transition">Contact</a>
                 </div>
                 <div class="md:hidden flex items-center">
@@ -106,8 +110,9 @@
                             <a href="research.html" class="px-8 py-3 border border-transparent text-base font-medium rounded-lg text-white bg-primary hover:bg-primary/90 md:py-4 md:text-lg md:px-10 transition">
                                 Our Research
                             </a>
-                            <a href="team.html" class="px-8 py-3 border border-transparent text-base font-medium rounded-lg text-primary bg-white hover:bg-gray-50 md:py-4 md:text-lg md:px-10 transition">
-                                Meet the Team
+                            <a href="Questionnaire Builder.html" class="px-8 py-3 border border-transparent text-base font-medium rounded-lg text-primary bg-white hover:bg-gray-50 md:py-4 md:text-lg md:px-10 transition flex items-center">
+                                <i data-feather="edit-3" class="w-4 h-4 mr-2"></i>
+                                Create Survey
                             </a>
                         </div>
                     </div>
@@ -432,8 +437,9 @@
                         Participate in our research surveys or join our team of data scientists. We're looking for talented individuals passionate about analytics, machine learning, and data visualization.
                     </p>
                     <div class="mt-8 flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="surveys.html" class="flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-lg text-primary bg-white hover:bg-gray-50 transition">
-                            Take Our Survey
+                        <a href="Questionnaire Builder.html" class="flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-lg text-primary bg-white hover:bg-gray-50 transition">
+                            <i data-feather="edit-3" class="w-4 h-4 mr-2"></i>
+                            Create Survey
                             <i data-feather="arrow-right" class="ml-2"></i>
                         </a>
                         <a href="careers.html" class="flex items-center justify-center px-6 py-3 border border-white text-base font-medium rounded-lg text-white hover:bg-white/10 transition">
@@ -486,8 +492,12 @@
                     </ul>
                 </div>
                 <div>
-                    <h3 class="text-sm font-semibold text-gray-300 tracking-wider uppercase">About</h3>
+                    <h3 class="text-sm font-semibold text-gray-300 tracking-wider uppercase">Tools</h3>
                     <ul class="mt-4 space-y-2">
+                        <li><a href="Questionnaire Builder.html" class="text-gray-400 hover:text-white transition flex items-center">
+                            <i data-feather="edit-3" class="w-3 h-3 mr-2"></i>
+                            Questionnaire Builder
+                        </a></li>
                         <li><a href="about.html" class="text-gray-400 hover:text-white transition">Our Story</a></li>
                         <li><a href="team.html" class="text-gray-400 hover:text-white transition">Team</a></li>
                         <li><a href="careers.html" class="text-gray-400 hover:text-white transition">Careers</a></li>
